# synth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  compose_acordes.py  compose_borde.py  compose_jazz.py  compose_jazz_solo.py  compose_lamano.py  compose_lamano_acordes.py  compose_lamano_largo.py  compose_samsara.py  compose_tools.py  engine.py  ojos.py  play  player.py  presets.py  pyproject.toml  render.py  reverb.py  sequencer.py  synth  synth.py  test_chords.py  test_drums.py  test_engine.py  test_ojos.py  test_presets.py  test_render.py  test_reverb.py  test_song.py  test_theory.py  test_ui.py  theory.py  ui.py
canciones/: acordes.json  aliento.json  cancion.json  el-borde.json  jazz-solo.json  jazz.json  la-mano-acordes.json  la-mano-largo.json  la-mano.json  percusion.json  primera.json  samsara.json
presets/: init.json  wurli-ep.json
