[project]
name = "kichoro-synth"
version = "0.1.0"
description = "Un sintetizador sustractivo que vive entero en el terminal."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sounddevice>=0.4.6",
    "textual>=0.80",
]

[tool.uv]
# nada especial; uv sync crea .venv aquí
